# beautifulplots

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_DEV_NOTES.md  examples.ipynb  pyproject.toml  pythonpath_setup.sh
data/: GSPC_1950-1-3_to_2022-6-8.csv  m5_forecast_results_FOODS_3_030_TX_3_ci90_npred50.csv  olist_orders_demand_type_minnzp10_20220817.csv
docs/: Makefile  conf.py  example.ipynb  examples.ipynb  examples.md  index.md  make.bat
notebooks/: online_sales.ipynb
src/beautifulplots/: __init__.py  barplot.py  beautifulplots.py  lineplot.py  scatterplot.py
tests/: plot_tst_notebook.ipynb  test_beautifulplots.py
