[tool.poetry]
name = "beautifulplots"
version = "0.1.0"
description = "Python plotting library for ebeautiful yet easy and sophisticated matplotlib based plots. WoCompatible with Pandas and Seaborn plots."
authors = ["Alberto Gutierrez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = ">=3.5.2"
seaborn = ">=0.11.2"
pandas = ">=1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
